--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Soccer League Table</string>
+    <string name="tv_draw_fixture">Draw Fixture</string>
+    <string name="tv_no_data">COULDN\'T FETCH THE DATA</string>
+    <string name="tv_team_list">TEAM LIST</string>
+    <string name="txt_dark_mode">Dark Mode</string>
 </resources>
